# roguelike

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  bad_game.sln  bad_game.vcxproj  cmake_install.cmake  roguelike.sln
data/scripts/ugdk/: ugdk_action.py  ugdk_audio.py  ugdk_gdd.py  ugdk_input.py  ugdk_math.py
include/ugdk/: graphic.h  input.h  math.h  time.h  util.h
include/ugdk/action/: animation.h  animationset.h  entity.h  observer.h
include/ugdk/audio/: audiomanager.h  music.h  sample.h
include/ugdk/base/: engine.h  resourcecontainer.h  resourcemanager.h  texturecontainer.h  types.h
include/ugdk/config/: config.h
include/ugdk/graphic/: drawable.h  font.h  light.h  modifier.h  node.h  textmanager.h  videomanager.h
include/ugdk/graphic/drawable/: solidrectangle.h  texturedrectangle.h
include/ugdk/graphic/spritesheet/: fixedspritesheet.h
include/ugdk/input/: inputmanager.h  keys.h
include/ugdk/math/: frame.h  vector2D.h
include/ugdk/time/: timeaccumulator.h  timemanager.h
include/ugdk/util/: animationparser.h  animationprotocol.h  intervalkdtree.h  language.h  languagemanager.h  languageword.h  pathmanager.h  utf8.h
include/ugdk/util/gdd/: abstractloader.h  cachedloader.tcc  cachedloader.th  parser.tcc  parser.th  parserutility.h  reader.h  simpleloader.tcc  simpleloader.th
src/: CMakeLists.txt  cmake_install.cmake  game.h  main.cc  roguelike.vcxproj  roguelike.vcxproj.filters  src_list.cmake
src/game/: action.h  alg.h  base.h  builder.h  component.h  config.h  config.h.in  game.h  gamecontroller.cc  gamecontroller.h  gameobject.cc  gameobject.h  gametile.cc  gametile.h
src/game/action/: gameaction.cc  gameaction.h  movement.h  skill.h
src/game/action/skill/: generic.cc  generic.h  movement.cc  movement.h  movement_place.cc  movement_place.h  movement_step.cc  movement_step.h  self.cc  self_damage.cc  self_damage.h  self_light.cc  self_light.h  self_lightvision.cc  self_lightvision.h  self_selfdamage.cc  self_selfdamage.h  sensory.cc  sensory.h  sensory_light.cc  sensory_light.h  sensory_selfdamage.cc  sensory_selfdamage.h  skill.cc  skill.h  skillmanager.cc  skillmanager.h
src/game/action/time/: timemanager.cc  timemanager.h
src/game/alg/: eqline.cc  eqline.h  equationalline.cc  equationalline.h  equationallinedouble.cc  equationallinedouble.h  equationallineimpl.cc  equationallineimpl.h  evenoctantiterator.cc  evenoctantiterator.h  loscone.cc  loscone.h  losoctant.cc  losoctant.h  losoctantprocessor.cc  losoctantprocessor.h  losprocessor.cc  losprocessor.h  octantiterator.h  oddoctantiterator.cc  oddoctantiterator.h
src/game/alg/los/: cone.cc  cone.h  evenoctantiterator.cc  evenoctantiterator.h  octant.cc  octant.h  octantiterator.h  octantprocessor.cc  octantprocessor.h  oddoctantiterator.cc  oddoctantiterator.h  processor.cc  processor.h
src/game/base/: gamecontroller.cc  gamecontroller.h  gameobject.cc  gameobject.h  gamething.h  gametile.cc  gametile.h
src/game/builder/: objectbuilder.cc  objectbuilder.h
src/game/builders/: objectbuilder.cc  objectbuilder.h
src/game/component/: componentbase.h  controller.h  controller_ai.cc  controller_ai.h  controller_idle.cc  controller_idle.h  controller_player.cc  controller_player.h  damageable.cc  damageable.h  energy.h  graphic.cc  graphic.h  graphic_rectangular.cc  graphic_rectangular.h  shape.h  shape_rectangular.cc  shape_rectangular.h  vision.cc  vision.h
src/game/components/: aicontroller.cc  aicontroller.h  collision.cc  collision.h  componentbase.h  controller.h  controller_ai.cc  controller_ai.h  controller_idle.cc  controller_idle.h  controller_player.cc  controller_player.h  damageable.cc  damageable.h  dragon.h  graphic.cc  graphic.h  graphic_rectangular.cc  graphic_rectangular.h  idlecontroller.h  playercontroller.cc  playercontroller.h  shape.h  shape_rectangular.cc  shape_rectangular.h  vision.cc  vision.h
src/utils/: utils.cc  utils.h
